--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,58 @@ body {
 .nav-key ul li:hover::after{
     width: 100%
 }
+.side-navbr{
+    background-image: linear-gradient(#000000 20%,#00000000);
+    z-index: 9999;
+    position: absolute;
+    width: 100%;
+}
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+#main {
+    transition: margin-left .5s;
+}
+
+#main span{
+    padding: 0px 10px;
+    font-size:20px;
+    color: #ffffff;
+    cursor:pointer;
+}
+
+.logo-a{
+    width: 90%;
+}
+
+
 .notice{
     background-color: #fca311;
     padding: 10px;
@@ -259,6 +311,8 @@ body {
         padding: 25px;
     }
 }
+
+
 @media (max-width:1024px) {
     .serve p{
         text-align: center;
@@ -276,43 +330,20 @@ body {
         font-size: 17px;
         font-weight: bolder;
     }
-}
-@media (max-width:768px) {
-    .serve p{
-        text-align: center;
-        padding: 4px 10px 10px 10px;
-        padding-left: 20px;
-        color: #14213d;
-        font-size: 9px;
-        font-weight: 600;
+    .navbr{
+        display: none;
     }
-    .serve h6{
-        padding-top: 10px;
-        margin: 0px;
-        text-align: start;
-        color: #000000;
-        font-size: 15px;
-        font-weight: bolder;
+    .side-navbr{
+        display: block;
+    }
+    .gallery{
+        display: none;
+    }
+    .faculity{
+        display: none;
     }
 }
-@media (max-width:426px) {
-    .serve p{
-        text-align: center;
-        padding: 4px 10px 10px 10px;
-        padding-left: 20px;
-        color: #14213d;
-        font-size: 13px;
-        font-weight: 600;
-    }
-    .serve h6{
-        padding-top: 10px;
-        margin: 0px;
-        text-align: start;
-        color: #000000;
-        font-size: 19px;
-        font-weight: bolder;
-    }
-}
+
 
 
 .gallery{
@@ -377,6 +408,7 @@ body {
     color: #ffffff;
 
 }
+
 .faculity{
     margin-top: 100px;
     width: 100vw;
@@ -450,23 +482,98 @@ body {
     margin-top: 200px;
     left: 50%;
     color: #fca311;
+    font-size: 50px;
     font-weight: bolder;
     letter-spacing: 2px;
 
 }
 
-.img-a{
-    position: absolute;
-    right: 3%;
-    margin-top: -30%;
+.fac-c{
+    width: 40%;
+    padding-top: 15%;
+    margin: 0% 10%;
 }
-.img-b{
-    position: absolute;
-    margin-top: -32.3%;
-    left: 0%;
+.fac-c h3{
+    margin: 50px 0px 10px;
+    font-size: 40px;
+    font-weight: 900;
+    letter-spacing: 2px;
 }
-.img-c{
-    position: absolute;
-    margin-top: 4.5%;
-    right: 0%;
+.btn-b{
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: #fca311;
+    border: 2px solid #14213d;
+}
+.btn-b:hover{
+    background-color: #14213d;
+    color: #ffffff;
+    transition: .5s;
+}
+
+@media (max-width:2560px){
+    .side-navbr{
+        display: none;
+    }
+    .work-hd-big{
+        display: block;
+    }
+    .work{
+        max-width: 1450px;
+    }
+    .work-hd{
+        display: none;
+    }
+}
+@media (max-width:1440px){
+    .work-hd-big{
+        display: none;
+    }
+    .work-hd{
+        display: block;
+    }
+}
+
+/*  screen size = 768 */
+
+@media (max-width:768px) {
+    .serve p{
+        text-align: center;
+        padding: 4px 10px 10px 10px;
+        padding-left: 20px;
+        color: #14213d;
+        font-size: 9px;
+        font-weight: 600;
+    }
+    .serve h6{
+        padding-top: 10px;
+        margin: 0px;
+        text-align: start;
+        color: #000000;
+        font-size: 15px;
+        font-weight: bolder;
+    }
+}
+
+@media (max-width:426px) {
+    .serve p{
+        text-align: center;
+        padding: 4px 10px 10px 10px;
+        padding-left: 20px;
+        color: #14213d;
+        font-size: 13px;
+        font-weight: 600;
+    }
+    .serve h6{
+        padding-top: 10px;
+        margin: 0px;
+        text-align: start;
+        color: #000000;
+        font-size: 19px;
+        font-weight: bolder;
+    }
+    #main span{
+        font-size: 10px;
+        padding: 0px 10px;
+    }
 }
