--- a/css/style.css
+++ b/css/style.css
@@ -56,21 +56,18 @@ body {
     align-items: center;
     
 }
-.head-cl-b a{
-    padding: 5%;
+.login a{
     text-decoration: none;
     font-size: 13px;
     font-weight: bolder;
     color: #F6F6F6;
 }
-.solid-ln{
-    color: #ffffff;
-    border-style: none solid none none;
-    margin: 14px 9px;
-    padding-right: 10px;
-}
-.registr{
-    padding-right: 60px;
+.login{
+    margin: 10px 40px 10px 0px ;
+    padding: 3px 10px;
+    background-color: #fca311;
+    border: none;
+    border-radius: 5px;
 }
 .navbr{
     background-image: linear-gradient(#000000 20%,#00000000);
@@ -311,45 +308,14 @@ body {
         padding: 25px;
     }
 }
-
-
-@media (max-width:1024px) {
-    .serve p{
-        text-align: center;
-        padding: 4px 10px 10px 10px;
-        padding-left: 20px;
-        color: #14213d;
-        font-size: 12px;
-        font-weight: 600;
-    }
-    .serve h6{
-        padding-top: 10px;
-        margin: 0px;
-        text-align: start;
-        color: #000000;
-        font-size: 17px;
-        font-weight: bolder;
-    }
-    .navbr{
-        display: none;
-    }
-    .side-navbr{
-        display: block;
-    }
-    .gallery{
-        display: none;
-    }
-    .faculity{
-        display: none;
-    }
-}
-
-
-
 .gallery{
     padding-top: 100px;
     margin-top: 80px;
 
+}
+.gallery-big{
+    padding-top: 100px;
+    margin-top: 80px;
 }
 .gall-row-a{
     display: flex;
@@ -363,6 +329,11 @@ body {
 .gall-row-b{
     display: flex;
     justify-content: space-around;
+    padding: 5px;
+}
+.gall-row-b-big{
+    display: flex;
+    justify-content: space-evenly;
     padding: 5px;
 }
 .gall-row-c{
@@ -388,7 +359,7 @@ body {
 }
 .gall-tag h3{
     margin-bottom: 30px;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bolder;
     color: #14213d;
 }
@@ -407,6 +378,29 @@ body {
     transition: .2s;
     color: #ffffff;
 
+}
+.gall-tag-big{
+    width: 640px;
+    height: 450px;
+    background-color: #ffffff;
+    position: absolute;
+    margin-top: -670px;
+    left: 38%;
+    border-radius: 3px;
+    padding: 50px;
+    padding-top: 80px;
+    text-align: center;
+}
+.gall-tag-big h3{
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: #14213d;
+}
+.gall-tag-big p{
+    color: #777777;
+    font-size: 22px;
+    margin-bottom: 40px;
 }
 
 .faculity{
@@ -524,6 +518,20 @@ body {
     .work-hd{
         display: none;
     }
+    .gallery-big{
+        display: block;
+    }
+    .gallery{
+        display: none;
+    }
+}
+@media (max-width: 1920px){
+    .gallery-big{
+        display: none;
+    }
+    .gallery{
+        display: block;
+    }
 }
 @media (max-width:1440px){
     .work-hd-big{
@@ -533,6 +541,45 @@ body {
         display: block;
     }
 }
+
+
+@media (max-width:1024px) {
+    .serve p{
+        text-align: center;
+        padding: 4px 10px 10px 10px;
+        padding-left: 20px;
+        color: #14213d;
+        font-size: 12px;
+        font-weight: 600;
+    }
+    .serve h6{
+        padding-top: 10px;
+        margin: 0px;
+        text-align: start;
+        color: #000000;
+        font-size: 17px;
+        font-weight: bolder;
+    }
+    .navbr{
+        display: none;
+    }
+    .side-navbr{
+        display: block;
+    }
+    .gallery{
+        display: none;
+    }
+    .gallery-big{
+        display: none;
+    }
+    .faculity{
+        display: none;
+    }
+    .head-cl-b{
+        display: none;
+    }
+}
+
 
 /*  screen size = 768 */
 
@@ -552,6 +599,18 @@ body {
         color: #000000;
         font-size: 15px;
         font-weight: bolder;
+    }
+    .moto-ln h3{
+        line-height: 1.25;
+    }
+    .moto-ln span{
+        text-align: center;
+        padding: 20px 0px 0px;
+    }
+    .moto-rw{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
     }
 }
 
@@ -575,5 +634,9 @@ body {
     #main span{
         font-size: 10px;
         padding: 0px 10px;
+    }
+    .address-hide{
+        display: flex;
+        flex-wrap: wrap;
     }
 }
